--- a/styles.css
+++ b/styles.css
@@ -744,7 +744,7 @@ section {
   line-height: 1.8;
   color: var(--text-secondary);
   margin-bottom: 1.5rem;
-  text-align: justify;
+  text-align: left;
 }
 
 .about-stats {
